# job-machine

./: .env.example  .gitignore  .pre-commit-hook.sh  BUILD_REPORT.md  LICENSE  POSTMORTEM.md  README.md  STOPS.md  config.json  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: validation.md
docs/routines/: harvest_weekly.md  ingest_daily.md  profile_monthly.md
prompts/: cover.md  followup.md  hn_parse.md  profile_expand.md  research.md  score.md  tailor.md
scripts/: __init__.py  cache_hn.py  db.py  detect.py  email.py  email_smoketest.py  fetchers.py  harvest.py  ingest.py  persist.py  profile_save.py  schema.sql  seed_resume.py  skill_helpers.py
skills/draft-cover/: SKILL.md
skills/draft-followup/: SKILL.md
skills/research-company/: SKILL.md
skills/tailor-resume/: SKILL.md
tests/: test_db.py  test_email.py  test_fetchers.py
