[project]
name = "job-machine"
version = "0.1.0"
description = "Personal job-search pipeline — Claude Code Routines, Turso state, Resend digests"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13",
    "libsql>=0.1.11",
    "python-dotenv>=1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
markers = ["live: hits external services, skipped in CI"]
